rust/graph/tests/snapshots/projections__workspace-astra-contract__flow-medium.snap
---
source: rust/graph/tests/projections.rs
expression: to_dot(&view)
---
digraph stencila_graph {
  graph [rankdir="LR", overlap="false", splines="true"];
  graph [fontname="Arial", fontsize="11", style="solid"];
  node [fontname="Arial", fontsize="10", margin="0.08,0.05"];
  edge [fontname="Arial", fontsize="9", arrowsize="0.7"];
  graph [preset="flow"];
  graph [detail="medium"];

  subgraph "cluster_astra-analysis-ref:astra.yaml:root:prior_analysis" {
    label="prior_analysis"; color="#c3ccd699"; bgcolor="#c3ccd62c";
    "astra-output:astra.yaml:root.ref.prior_analysis:baseline" [label="baseline", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
    "astra-output:astra.yaml:root.ref.prior_analysis:diagnostics" [label="diagnostics", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
  }
  subgraph "cluster_astra-analysis:astra.yaml:root" {
    label="ASTRA contract fixture"; color="#c3ccd699"; bgcolor="#c3ccd62c";
    subgraph "cluster_astra-analysis:astra.yaml:root.model" {
      label="Fit model"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "astra-analysis:astra.yaml:root.model" [label="Fit model", kind="other", shape="box", style="filled", fillcolor="#ffffff", color="#647486"];
      "astra-decision:astra.yaml:root.model:estimator" [label="Estimator", kind="other", shape="box", style="filled", fillcolor="#ffffff", color="#647486"];
      "astra-output:astra.yaml:root.model:fit" [label="fit", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
      "workflow-unit:astra.yaml%23root.model:fit" [label="fit", kind="function", shape="diamond", style="filled", fillcolor="#eaf4fb", color="#2870a6"];
      "workflow-unit:astra.yaml%23root.model:score" [label="score", kind="function", shape="diamond", style="filled", fillcolor="#eaf4fb", color="#2870a6"];
    }
    subgraph "cluster_astra-analysis:astra.yaml:root.prepare" {
      label="Prepare catalog"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "astra-decision:astra.yaml:root.prepare:estimator" [label="Estimator", kind="other", shape="box", style="filled", fillcolor="#ffffff", color="#647486"];
      "astra-output:astra.yaml:root.prepare:cleaned" [label="cleaned", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
      "workflow-unit:astra.yaml%23root.prepare:cleaned" [label="cleaned", kind="function", shape="diamond", style="filled", fillcolor="#eaf4fb", color="#2870a6"];
    }
    subgraph "cluster_astra-analysis:astra.yaml:root.report" {
      label="Build report"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "astra-output:astra.yaml:root.report:summary" [label="summary", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
      "workflow-unit:astra.yaml%23root.report:summary" [label="summary", kind="function", shape="diamond", style="filled", fillcolor="#eaf4fb", color="#2870a6"];
    }
    "astra-output:astra.yaml:root:final_report" [label="final_report", kind="reference", shape="note", style="filled", fillcolor="#f1eef8", color="#6f4fb0"];
  }
  subgraph "cluster_dir:." {
    label="workspace-astra-contract/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
    subgraph "cluster_dir:data" {
      label="data/"; color="#c3ccd699"; bgcolor="#c3ccd62c";
      "datatable:data/catalog.csv" [label="catalog.csv", kind="datatable", shape="box", style="filled", fillcolor="#edf7ee", color="#3f7f48"];
    }
  }
  "container:ghcr.io/example/fitter%3A1.0" [label="fitter:1.0", kind="software", shape="box3d", style="filled", fillcolor="#f1f5ff", color="#5261b8"];
  "resource:https%3A//example.org/calibration.csv" [label="calibration.csv", kind="resource", shape="component", style="filled", fillcolor="#eef2f7", color="#516981"];

  "astra-decision:astra.yaml:root.model:estimator" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Configures", kind="Configures", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-decision:astra.yaml:root.prepare:estimator" -> "workflow-unit:astra.yaml%23root.prepare:cleaned" [label="Configures", kind="Configures", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "container:ghcr.io/example/fitter%3A1.0" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Configures", kind="Configures", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.report:summary" -> "astra-output:astra.yaml:root:final_report" [label="Derived Into", kind="DerivedInto", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "workflow-unit:astra.yaml%23root.model:fit" -> "astra-output:astra.yaml:root.model:fit" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "workflow-unit:astra.yaml%23root.model:score" -> "astra-analysis:astra.yaml:root.model" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "workflow-unit:astra.yaml%23root.prepare:cleaned" -> "astra-output:astra.yaml:root.prepare:cleaned" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "workflow-unit:astra.yaml%23root.report:summary" -> "astra-output:astra.yaml:root.report:summary" [label="Generated", kind="Generated", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.model:fit" -> "workflow-unit:astra.yaml%23root.model:score" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.model:fit" -> "workflow-unit:astra.yaml%23root.report:summary" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.prepare:cleaned" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "datatable:data/catalog.csv" -> "workflow-unit:astra.yaml%23root.prepare:cleaned" [label="Read By", kind="ReadBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.ref.prior_analysis:baseline" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Received By", kind="ReceivedBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "astra-output:astra.yaml:root.ref.prior_analysis:diagnostics" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Received By", kind="ReceivedBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
  "resource:https%3A//example.org/calibration.csv" -> "workflow-unit:astra.yaml%23root.model:fit" [label="Received By", kind="ReceivedBy", count="1", evidence_count="1", action_count="0", low_confidence="false", style="solid", color="#4b5563"];
}
